Added title tag to html exercises

--- a/HTML 101/example1.html
+++ b/HTML 101/example1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Exercise 1</title>
     </head>
     <body>
         <h1>This is a website made iwth only h tags!</h1>
