--- a/HTML 101/example5.html
+++ b/HTML 101/example5.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Exercise 5</title>
+    </head>
     <body>
         <h1>Here's a couple of ways you can express yourself</h1>
         <hr />
