--- a/HTML 101/exercise4.html
+++ b/HTML 101/exercise4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Exercise 4</title>
     </head>
     <body>
         <h1>Lines. So many lines.</h1>
