--- a/HTML 101/exercise7.html
+++ b/HTML 101/exercise7.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Exercise 7</title>
+    </head>
     <body>
         <h1>For this example:</h1>
         <div>I want you to Google image search your full name and place the first result here:</div><br />
