--- a/HTML 101/exercise8.html
+++ b/HTML 101/exercise8.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Exercise 8</title>
+    </head>
     <body>
         <h1>This example is simple</h1>
         <div>Just link to any website on the internet and make the link text "Click me"</div>
