--- a/HTML 101/exercise9.html
+++ b/HTML 101/exercise9.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Exercise 9</title>
+    </head>
     <body>
         <h1>This is the last example</h1>
         <hr />
