--- a/HTML 101/exercise2.html
+++ b/HTML 101/exercise2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Exercise 2</title>
     </head>
     <body>
         <h1>This example is about nesting div tags</h1>
