--- a/HTML 101/exercise3.html
+++ b/HTML 101/exercise3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Exercise 3</title>
     </head>
     <body>
         <h1>This example is about making lists</h1>
