--- a/HTML 101/exercise6.html
+++ b/HTML 101/exercise6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Exercise 6</title>
     </head>
     <body>
         <h1>That covers the tags you've learned so far!</h1>
