adding vending2.js file

--- a/HTML 101/index.html
+++ b/HTML 101/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Christina Jones</title>
+    </head>
     <body>
         <h1 align="center">Christina Jones</h1>
         <h3 align="center">Marietta, GA</h3>
