--- a/rps/index.html
+++ b/rps/index.html
@@ -5,7 +5,8 @@
 </head>
 <html>
     <body>
-        <h1 class="text-center">Rock Paper Scissors</h1>
+    
+        <div class="container text-center"><img src="/images/rock.jpg" alt="rock" /><img src="/images/paper.jpg" alt="paper" /><img src="/images/scissors.jpg" alt="scissors" /></div>
         <section class="game">
             <div class="score row text-center">
                 <div class="player-score col-6">
@@ -17,11 +18,13 @@
                     <p id="computer-score">0</p>
                 </div>
             </div>
-            <h3 class="winner text-center">Make your play!</h3>
+            <h3 class="winner text-center"><button onclick="makeTimer();">Start the countdown!</button></h3>
             <div class="text-center" id="timer"></div>
-            <div class="text-center" id="computer-selection"></div>
+
         </section>
         <div id="game"></div>
+                            <div class="text-center" id="player-selection"></div>
+                    <div class="text-center" id="computer-selection"></div>
     </body>
     <script type="text/javascript" src="app.js" ></script>
 </html>
