--- a/Ajax/sceneIt/watchlist.html
+++ b/Ajax/sceneIt/watchlist.html
@@ -21,6 +21,7 @@
 			    <div class="col-12 header text-center">
 				    <h2 class="display-2">Scene It</h2>
 				        <p>Here are the movies you want to watch.</p>
+						<a href="/index.html" class="btn btn-primary">Go back to Movie Search!</a><br /><br />
 			</div>
 		</div>
         <div class="movies-container"></div>
