--- a/Ajax/sceneIt/index.html
+++ b/Ajax/sceneIt/index.html
@@ -2,48 +2,53 @@
 <html>
 <head>
 	<title>Scene It</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	 crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	 crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-	 crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-	 crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
 	<link rel="stylesheet" href="index.css" />
 </head>
 <body>
+	<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="./watchlist.html">My Watchlist</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
 	<div class="container">
 		<div class="row">
 			<div class="col-12 header text-center">
 				<h2 class="display-2">Scene It</h2>
-				<p>Search for movies you want to watch.</p>
-				<p>Save them to your list</p>
-                <a href="/watchlist.html" class="btn btn-primary">Go to my watchlist</a><br /><br />
+				<h3>Search for movies you want to watch.</h3>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 search">
 				<form id="search-form">
 					<div class="input-group input-group-lg">
-						<input class="form-control search-bar" placeholder="Search for a movie...">	
-						<button class="btn btn-primary input-group-btn" type="submit">Search</button>
-				    </div>
+						<input class="form-control search-bar" placeholder="Search for movies to add to your list...">	
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					</div>
 				</form>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 results">
-
-				<!-- MOVIES SHOW UP HERE! -->
-
-                <div class="movies-container">
-	            </div>
-</div>
+				<div class="movies-container">
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
 	<script src="data.js"></script>
 	<script src="index.js"></script>
+	<script src="watchlist.js"></script>
 </html>
